tests/baselines/reference/invalid-dangling-groupname-without-group-u.errors.txt
invalid-dangling-groupname-without-group-u.ts(19,5): error TS1530: There is no capturing group named 'a' in this regular expression.
invalid-dangling-groupname-without-group-u.ts(19,8): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== invalid-dangling-groupname-without-group-u.ts (2 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: Group reference must have corresponding group.
    info: |
      It is a Syntax Error if the enclosing Pattern does not contain a
      GroupSpecifier with an enclosed RegExpIdentifierName whose StringValue
      equals the StringValue of the RegExpIdentifierName of this production's
      GroupName.
    esid: sec-patterns-static-semantics-early-errors
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /\k<a>/u;
        ~
!!! error TS1530: There is no capturing group named 'a' in this regular expression.
           ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    